# better_casts

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile  README.md  better_casts.hpp  tester.cpp
.github/workflows/: cmake.yml
docs/html/: annotated.html  better__casts_8hpp.html  better__casts_8hpp_source.html  classcasts_1_1cast__error.html  classcasts_1_1enum__cast__error.html  classcasts_1_1float__cast__error.html  classcasts_1_1narrow__cast__error.html  classcasts_1_1sign__cast__error.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  hierarchy.html  index.html  namespacecasts.html  namespacecasts.js  namespacecasts_1_1float__cast__op.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  structcasts_1_1detail_1_1math_1_1float__const-members.html  structcasts_1_1detail_1_1math_1_1float__const.html  structcasts_1_1detail_1_1math_1_1float__op__ceiling.html  structcasts_1_1detail_1_1math_1_1float__op__floor.html  structcasts_1_1detail_1_1math_1_1float__op__round.html  structcasts_1_1detail_1_1math_1_1float__op__truncate.html  structcasts_1_1detail_1_1underlying__type-members.html  structcasts_1_1detail_1_1underlying__type.html  structcasts_1_1detail_1_1underlying__type_3_01_t_00_01true_01_4-members.html  structcasts_1_1detail_1_1underlying__type_3_01_t_00_01true_01_4.html  structcasts_1_1is__enum__castable.html  structcasts_1_1is__float__castable.html  structcasts_1_1is__narrow__castable.html  structcasts_1_1is__sign__castable.html  structcasts_1_1is__up__castable.html  structcasts_1_1is__void__castable.html
docs/html/html/: annotated_dup.js  better__casts_8hpp.js  classcasts_1_1enum__cast__error.html  classcasts_1_1narrow__cast__error.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  hierarchy.js  namespacecasts.html  namespacecasts_1_1float__cast__op.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  navtreedata.js  navtreeindex0.js  structcasts_1_1detail_1_1math_1_1float__const-members.html  structcasts_1_1detail_1_1math_1_1float__op__floor.html  structcasts_1_1detail_1_1math_1_1float__op__round.html  structcasts_1_1detail_1_1underlying__type.html  structcasts_1_1detail_1_1underlying__type_3_01_t_00_01true_01_4-members.html  structcasts_1_1is__float__castable.html  structcasts_1_1is__sign__castable.html  structcasts_1_1is__up__castable.html
docs/html/html/search/: all_1.js  all_3.js  all_4.js  all_8.js  all_9.js  classes_0.js  classes_3.js  classes_5.js  files_0.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js
docs/html/search/: all_2.js  all_5.js  all_6.js  all_7.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  defines_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  variables_2.js
include/: better_casts.hpp
tests/: .clang-tidy  CMakeLists.txt  enum_cast.test.cpp  float_cast.test.cpp  narrow_cast.test.cpp  sign_cast.test.cpp
